--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -1,6 +1,9 @@
 .inner {
     width: 1280px;
+    height: auto;
+    min-height: 100%;
     margin: 0 auto;
+    padding: 0 55px 270px;
 }
 /* 버튼들 */
 /* 탑버튼 */
