--- a/src/main/resources/static/user/common/css/footer.css
+++ b/src/main/resources/static/user/common/css/footer.css
@@ -1,5 +1,6 @@
 /* 푸터 */
 footer {
+    position: relative;
     width: 1280px;
     height: 250px;
     margin: 0 auto;
@@ -8,6 +9,7 @@ footer {
     align-items: center;
     gap: 10px;
     padding: 48px 55px;
+    transform: translateY(-100%);
     background-color: #FAFAFA;
 }
 
