--- a/src/main/resources/static/user/common/css/header.css
+++ b/src/main/resources/static/user/common/css/header.css
@@ -1,5 +1,7 @@
 /* 헤더 */
 header {
+    width: 1280px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
